--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,7 @@
     ],
     "license": "GPL-2.0-or-later",
     "require": {
-        "typo3/cms-core": "^12.4"
+        "typo3/cms-core": "^11.5 || ^12.4"
     },
     "require-dev": {
         "typo3/testing-framework": "^7.0.0"
