--- a/Documentation/Settings.cfg
+++ b/Documentation/Settings.cfg
@@ -3,7 +3,7 @@
 
 [general]
 
-project     = Authentification system
+project     = Authtoken
 version     = main (development)
 release     = main (development)
 copyright   = since 2023 by Mike Zimmer
